[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/UI/endscreen/Reiniciar.gd" type="Script" id=1]
[ext_resource path="res://src/UI/endscreen/Endscreen.gd" type="Script" id=2]
[ext_resource path="res://src/UI/XP/expCounter.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Levels/Level_1.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UI/themes/Title_font.tres" type="Theme" id=5]
[ext_resource path="res://src/UI/themes/end_font.tres" type="Theme" id=6]
[ext_resource path="res://src/UI/Mainmenu/Main_menu_bgd.png" type="Texture" id=7]
[ext_resource path="res://src/UI/Mainmenu/Main_menu.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_game"
} ]
}

[node name="Endscreen" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true
script = ExtResource( 2 )
packed_scene = ExtResource( 4 )
packed_scene2 = ExtResource( 8 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="Died label" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.216
anchor_right = 0.5
anchor_bottom = 0.216
margin_left = -160.0
margin_top = 215.4
margin_right = 249.0
margin_bottom = 285.4
input_pass_on_modal_close_click = false
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.5
theme = ExtResource( 6 )
custom_colors/default_color = Color( 0.654902, 0.227451, 0.227451, 1 )
bbcode_enabled = true
bbcode_text = "Has Muerto"
tab_size = 3
text = "Has Muerto"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.5
margin_top = 169.0
margin_right = 203.5
margin_bottom = 273.0

[node name="Reiniciar" type="Button" parent="VBoxContainer"]
margin_right = 407.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
text = "Reiniciar"
script = ExtResource( 1 )

[node name="main_Menu" type="Button" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 407.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
text = "Menu Principal"

[node name="Salir" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 407.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
text = "Salir"

[node name="expCounter" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -42.5
margin_top = -189.0
margin_right = 42.5
margin_bottom = -161.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/fade_out = SubResource( 2 )

[connection signal="button_up" from="VBoxContainer/Reiniciar" to="VBoxContainer/Reiniciar" method="_on_Reiniciar_button_up"]
[connection signal="starting_game" from="VBoxContainer/Reiniciar" to="." method="_on_Reiniciar_starting_game"]
[connection signal="button_up" from="VBoxContainer/main_Menu" to="." method="_on_main_Menu_button_up"]
[connection signal="button_up" from="VBoxContainer/Salir" to="." method="_on_Salir_button_up"]
